---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-09-30
  Changes:
    - Fixed milestone compatibility
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2025-09-30
  Bugfixes:
    - Fixed softlock with Iron Sticks not being unlocked. How did this even work in the 1.1 mod??
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-09-29
  Changes:
    - Updated to 2.0.
      - Lots of fixes and migrations. See github for blames
      - Has been tested with and without K2 and SE
---------------------------------------------------------------------------------------------------
Version: 1.0.8
  Bugfixes:
    - (LL, !brass) Liquid rocket fuel no longer costs rubber or gaskets.

---------------------------------------------------------------------------------------------------
Version: 1.0.7
  Bugfixes:
    - Plastic-with-toluene can use productivity modules. For real this time.
    - Burner chemical plant will no longer buffer excessive fluid outputs.
  Compatibility:
    - Support for Lunar Landings added.

---------------------------------------------------------------------------------------------------
Version: 1.0.6
  Changes:
    - Advanced Polymer Synthesis recipes can use productivity modules.
  Bugfixes:
    - Fixed potassium nitrate having a broken locale key.

---------------------------------------------------------------------------------------------------
Version: 1.0.5
  Bugfixes:
    - Fixed startup error with Them Thar Hills when greenhouses are disabled.

---------------------------------------------------------------------------------------------------
Version: 1.0.4
  Changes: