@@ -6,9 +6,34 @@
   "homepage": "https://github.com/AtelierAmber/BrimStuff-Updated",
   "description": "Updated for 2.0. Adds minable sulfur, burner chemical plant, gunpowder and rubber. Changes how sulfur is obtained from oil. Optionally adds chemical waste reprocessing and greenhouses.",
   "factorio_version": "2.0",
-  "dependencies": ["base >= 2.0", "? ThemTharHills-Updated", "? BrassTacks-Updated", "? IfNickel-Updated", "? bzgold", "? bzaluminum", "? bzcarbon", "? bztin", "? bzfoundry", "? bzzirconium", "? bzgas", "? space-exploration", 
-  "? aai-industry", "? aai-containers", "? aai-signal-transmission", "? deadlock-beltboxes-loaders", "? DeadlockCrating", "? vtk-deep-core-mining", "? FluidMustFlow", "? Expensive_Fluid_Must_Flow_Recipes", 
-  "? Krastorio2", "? RenaiTransportation", "? cargo-ships", "? intermodal-containers", "? LunarLandings"],
+  "dependencies": [
+    "base >= 2.0",
+    "? ThemTharHills-Updated",
+    "? BrassTacks-Updated",
+    "? IfNickel-Updated",
+    "? bzgold",
+    "? bzaluminum",
+    "? bzcarbon",
+    "? bztin",
+    "? bzfoundry",
+    "? bzzirconium",
+    "? bzgas",
+    "? space-exploration",
+    "? aai-industry",
+    "? aai-containers",
+    "? aai-signal-transmission",
+    "? deadlock-beltboxes-loaders",
+    "? DeadlockCrating",
+    "? vtk-deep-core-mining",
+    "? FluidMustFlow",
+    "? Expensive_Fluid_Must_Flow_Recipes",
+    "? Krastorio2",
+    "? RenaiTransportation",
+    "? cargo-ships",
+    "? intermodal-containers",
+    "? 248k-Redux",
+    "? LunarLandings"
+  ],
   "package": {
     "git_publish_branch": "main",
     "ignore": [ "imgui.ini", "screenshots/*" ],
